Major html/css update
- Stopped at the middle to reorganize dev/ and add some dev features

--- a/src/cv/template.html
+++ b/src/cv/template.html
@@ -17,8 +17,10 @@
 <body>
     @@site-header@@
 
-    <div id="site-main" class="personal">
-        @@titlecard@@
+    <main id="rssite-main" class="rssite-local">
+        <div id="titlecard">
+            <h1>Ricardo Semião e Castro</h1>
+        </div>
 
         <section id="education">
             <h2>Education and Skills</h2> 
@@ -132,10 +134,9 @@
         <!-- <section id="cv-download">
             <p>PDF version: <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/raw/main/assets/cv/cv_pdf/Ricardo%20Semi%C3%A3o%20-%20CV.pdf" download>download</a>.</p>
         </section> -->
-    </div>
+    </main>
 
     @@site-footer@@
-
     @@site-scripts@@
 </body>
 
