--- a/src/gallery/template.html
+++ b/src/gallery/template.html
@@ -17,7 +17,7 @@
 <body>
     @@site-header@@
 
-    <div id="site-main" class="personal gallery-grid">
+    <div id="rssite-main" class="rssite-local gallery-grid">
         <img data-h="3" data-w="2" src="./araucaria.gif">
         <img data-h="3" data-w="3" src="./galdi.jpg">
         <img data-h="2" data-w="4" src="./rio.jpg">
