Major update of styling

--- a/src/index/template.html
+++ b/src/index/template.html
@@ -11,6 +11,12 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./index/module.css">
+
+    <svg style="display: none;" xmlns="http://www.w3.org/2000/svg">
+        <symbol id="icon-info" viewBox="0 0 50 50">
+            <path d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z"></path>
+        </symbol>
+    </svg>
 </head>
 
 
@@ -52,54 +58,54 @@
                 <div class="column-card">
                     <p>Academic articles/tasks:</p>
                     <ul>
-                        <li><a href="https://github.com/ricardo-semiao/misc-masters" data-explanation="Empirical and theoretical tasks from my masters degree, spamming several courses, with lots of econometrics.">misc-masters</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/article-regime-id-performance" data-explanation="My (in progress) Master thesis. My goal is to understand the performance of regime switching time-series models, specially in respect to characteristics correctness of the identified regimes, using Monte Carlo simulations.">article-regime-id-performance</a><span></li>
-                        <li><a href="https://github.com/ricardo-semiao/article-covid-svardiff" data-explanation="My graduation thesis. My goal was to estimate the effect of the Brazilian vaccination policy, by comparing Structural VAR models before and after the start of its implementation.">article-covid-svardiff</a><span></li>
+                        <li><a href="https://github.com/ricardo-semiao/misc-masters" data-description="Empirical and theoretical tasks from my masters degree, spamming several courses, with lots of econometrics.">misc-masters</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/article-regime-id-performance" data-description="My (in progress) Master thesis. My goal is to understand the performance of regime switching time-series models, specially in respect to characteristics correctness of the identified regimes, using Monte Carlo simulations.">article-regime-id-performance</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/article-covid-svardiff" data-description="My graduation thesis. My goal was to estimate the effect of the Brazilian vaccination policy, by comparing Structural VAR models before and after the start of its implementation.">article-covid-svardiff</a>@@i@@</li>
                     </ul>
                 </div>
                 <div class="column-card">
                     <p>Educational materials:</p>
                     <ul>
-                        <li><a href="https://ricardo-semiao.github.io/course-rfcd" data-explanation="An educational book on the R language. Authorial, but inspired by existing literature. It is in construction and available in the navbar above.">R (RFCD)</a></li>
-                        <li><a href="https://ricardo-semiao.github.io/course-ccia" data-explanation="An educational book on introductory Computer Science and its applications. Made for my own study. It is in construction and available in the navbar above.">CC (CCIA)</a></li>
-                        <li><a href="https://ricardo-semiao.github.io/course-paaml" data-explanation="An educational book on Python (automation, apps, and ML). Made for my personal study. It is in construction and available in the navbar above.">Python (PAAML)</a></li>
+                        <li><a href="https://ricardo-semiao.github.io/course-rfcd" data-description="An educational book on the R language. Authorial, but inspired by existing literature. It is in construction and available in the navbar above.">R (RFCD)</a>@@i@@</li>
+                        <li><a href="https://ricardo-semiao.github.io/course-ccia" data-description="An educational book on introductory Computer Science and its applications. Made for my own study. It is in construction and available in the navbar above.">CC (CCIA)</a>@@i@@</li>
+                        <li><a href="https://ricardo-semiao.github.io/course-paaml" data-description="An educational book on Python (automation, apps, and ML). Made for my personal study. It is in construction and available in the navbar above.">Python (PAAML)</a>@@i@@</li>
                     </ul>
                 </div>
                 <div class="column-card">
                     <p>Code packages:</p>
                     <ul>
-                        <li><a href="https://ricardo-semiao.github.io/phyopt" data-explanation="A R package for describing multivariate time series with ggplots and tables.">phyopt</a></li>
-                        <li><a href="https://ricardo-semiao.github.io/mtsdesc" data-explanation="A R package for creating population-based hybrid-optimization algorithms.">mtsdesc</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/morphdown" data-explanation="A R package to programmatically change the structure of R Markdown files. Built to convert my book 'RFCD' into course-friendly slide presentations.">morphdown</a></li>
+                        <li><a href="https://ricardo-semiao.github.io/phyopt" data-description="A R package for describing multivariate time series with ggplots and tables.">phyopt</a>@@i@@</li>
+                        <li><a href="https://ricardo-semiao.github.io/mtsdesc" data-description="A R package for creating population-based hybrid-optimization algorithms.">mtsdesc</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/morphdown" data-description="A R package to programmatically change the structure of R Markdown files. Built to convert my book 'RFCD' into course-friendly slide presentations.">morphdown</a>@@i@@</li>
                     </ul>
                 </div>
                 <div class="column-card">
                     <p>Site and tools:</p>
                     <ul>
-                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/" data-explanation="A GitHub repository for storing my personal palette, file templates, etc.">Personal themes/tools</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/" data-explanation="My personal site. It includes the Home and CV tabs, and the common templates used in other published projects.">This site</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/tree/main/packages/template_injector" data-explanation="A simple, custom build, HTML template engine built in Python. It was built to power this site.">template_injector</a></li>
+                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/" data-description="A GitHub repository for storing my personal palette, file templates, etc.">Personal themes/tools</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/" data-description="My personal site. It includes the Home and CV tabs, and the common templates used in other published projects.">This site</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/tree/main/packages/template_injector" data-description="A simple, custom build, HTML template engine built in Python. It was built to power this site.">template_injector</a>@@i@@</li>
                     </ul>
                 </div>
                 <div class="column-card">
                     <p>Miscellaneous:</p>
                     <ul>
-                        <li><a href="https://github.com/ricardo-semiao/misc-general" data-explanation="Miscellaneous projects, most for fun or for learning, with questionable quality.">misc-general</a></li>
-                        <li><a href="https://github.com/mevaldt/diversified_crypto" data-explanation="A R Shiny app for crypto portfolio optimization and analysis. Built in a project for Ripple.">mevaldt/diversified_crypto</a></li>
+                        <li><a href="https://github.com/ricardo-semiao/misc-general" data-description="Miscellaneous projects, most for fun or for learning, with questionable quality.">misc-general</a>@@i@@</li>
+                        <li><a href="https://github.com/mevaldt/diversified_crypto" data-description="A R Shiny app for crypto portfolio optimization and analysis. Built in a project for Ripple.">mevaldt/diversified_crypto</a>@@i@@</li>
                     </ul>
                 </div>
             </div>
 
-            <div id="projects-tooltip" role="tooltip" aria-hidden="true" style="visibility: hidden;">
-                <h3></h3>
-                <p></p>
+            <div id="projects-tooltip" class="projects-tooltip" role="tooltip" aria-hidden="true">
+                <h3 class="pt-title"></h3>
+                <p class="pt-text"></p>
             </div>
         </section>
     </main>
 
     @@site-footer@@
-    <script src="./index/module.js"></script>
     @@site-scripts@@
+    <script src="./index/module.js"></script>
 </body>
 
 
