--- a/src/cv/template.html
+++ b/src/cv/template.html
@@ -39,7 +39,11 @@
                 </tr>
                 <tr>
                     <td>Programming</td>
-                    <td>R | Python | Julia | Stata </td>
+                    <td>R | Python ; Familiarity with JavaScript | Julia | Stata</td>
+                </tr>
+                <tr>
+                    <td>Tools</td>
+                    <td>Git/GitHub | SQL</td>
                 </tr>
                 <tr>
                     <td>Documenting</td>
@@ -52,72 +56,86 @@
             <h2>Experience</h2>
             <ul>
                 <li class="job">
-                    <h3>Research Assistant</h3>
-                    <div class="row-hfill">
-                        <p class="employer">FGV-EESP &amp; Ripple</p>
-                        <p class="duration">10/2022 - 04/2023</p>
+                    <h3 class="j-title">Researcher</h3>
+                    <div class="j-wherewhen">
+                        <span>ADB Sindical (syndicate of Brazilian diplomats)</span>
+                        <span>08/2024 - ongoing</span>
                     </div>
-                    <p>Development of a <a href="https://github.com/mevaldt/diversified_crypto">R-Shiny application</a> for crypto portfolio optimization and analysis.</p>
+                    <p class="j-text">
+                        Research on barriers in the diplomatic career path. Creation of a <a href="https://atualizamre.com.br/calculadora/">predictive calculator</a> for individual careers. Data scrapping, reorganization, and validation, from different media sources.
+                    </p>
                 </li>
                 <li class="job">
-                    <h3>Econometrics I Teaching Assistant</h3>
-                    <div class="row-hfill">
-                        <p class="employer">FGV-EESP</p>
-                        <p class="duration">02/2022 - 06/2023</p>
+                    <h3 class="j-title">Research Assistant</h3>
+                    <div class="j-wherewhen">
+                        <span>FGV-EESP &amp; Ripple</span>
+                        <span>10/2022 - 04/2023</span>
                     </div>
-                    <p>Conducted exercises, theoretical classes, and R sessions.</p>
+                    <p class="j-text">
+                        Development of a <a href="https://github.com/mevaldt/diversified_crypto">R-Shiny application</a> for crypto portfolio optimization and analysis.
+                    </p>
                 </li>
                 <li class="job">
-                    <h3>Vice President, HR Director</h3>
-                    <div class="row-hfill">
-                        <p class="employer">GVCode (programming league at FGV)</p>
-                        <p class="duration">06/2020 - 12/2023</p>
+                    <h3 class="j-title">Econometrics I Teaching Assistant</h3>
+                    <div class="j-wherewhen">
+                        <span>FGV-EESP</span>
+                        <span>02/2022 - 06/2023</span>
                     </div>
-                    <p>Coordinated all league activities, created and conducted selection processes and trainee programs. Executed projects related to programming and data science.</p>
+                    <p class="j-text">
+                        Conducted exercises, theoretical classes, and R teaching sessions.
+                    </p>
                 </li>
                 <li class="job">
-                    <h3>Private Tutor in Statistics, R, and Python</h3>
-                    <p>Private lessons for university students. Active in StackOverflow: 260 answers in over 125 tags, top 5% in the R community.</p>
-                </li>
-                <!-- <li class="job">
-                    <h3>Researcher</h3>
-                    <div class="row-hfill">
-                        <p class="employer">ADB Sindical (syndicate of Brazilian diplomats)</p>
-                        <p class="duration">04/2024 - ongoing</p>
+                    <h3 class="j-title">Vice President, HR Director</h3>
+                    <div class="j-wherewhen">
+                        <span>GVCode (programming league at FGV)</span>
+                        <span>06/2020 - 12/2023</span>
                     </div>
-                    <p>Private lessons for university students. Active in StackOverflow: 260 answers in over 125 tags, top 5% in the R community.</p>
-                </li> -->
+                    <p class="j-text">
+                        Coordinated all league activities, created and conducted selection processes and trainee programs. Executed projects in the general realm of programming and data science.
+                    </p>
+                </li>
+                <li class="job">
+                    <h3 class="j-title">Private Tutor in Statistics, R, and Python</h3>
+                    <p class="j-text">
+                        Private lessons for university students. Active in StackOverflow: 260 answers in over 125 tags, top 5% in the R community.
+                    </p>
+                </li>
             </ul>
         </section>
         
         <section id="projects">
-            <h2>Projects and Awards</h2>
+            <h2>Projects</h2>
             <ul>
-                <li class="project">
-                    <a href="https://github.com/ricardo-semiao/challenge-constdev">Prediction Model</a> for investment flow in B³ using a neural network.
-                    <p><i class="fa fa-trophy"></i> 2nd place in the Dev Challenge (2022, Constellation A. M.).<p>
+                <li>
+                    Developing of code packages: <a href="https://ricardo-semiao.github.io/tools/mtsdesc/">mtsdesc</a> for multivariate time series visualization and testing; <a href="https://ricardo-semiao.github.io/tools/phyopt/">phyopt</a> for numerical optimization with population-based hybrid algorithms.
                 </li>
-                <li class="project">
-                    ANPEC exam, the Brazil-wide admission for master's students in economics.
-                    <p><i class="fa fa-trophy"></i> 10th place (without Brazilian economics).<p>
+                <li>
+                    Development of <a href="https://ricardo-semiao.github.io/library/rfcd/">educational material</a> about R, with voluntary classes being given at GVCode.
                 </li>
-                <li class="project">
-                    Article awards: Ridge and Lasso regression analysis on salary determinants; nations clustering analysis with WTO data.
-                    <p><i class="fa fa-trophy"></i> 1st and 2nd place in each category (2020 and 2021, EESP).<p>
+                <li>
+                    Thesis: <a href="https://github.com/ricardo-semiao/article-covid-svardiff">Graduation thesis</a> on SVAR models applied to epidemiology; <a href="https://github.com/ricardo-semiao/article-regimes-id-performance">Masters thesis</a> on performance analysis of regime-switching models via Monte Carlo simulations.
                 </li>
-                <li class="project">
-                    Developing of code packages: <a href="https://ricardo-semiao.github.io/mtdesc/">mtdesc</a> for multivariate time series visualization and testing; <a href="https://ricardo-semiao.github.io/phyopt/">phyopt</a> for creating population-based hybrid-optimization algorithms; and <a href="https://ricardo-semiao.github.io/morphdown/">morphdown</a> for programmatically modifying markdown file structures.
-                    <p><i class="fa fa-hourglass"></i> In development.<p>
-                </li>
-                <li class="project">
-                    Development of <a href="https://ricardo-semiao.github.io/course-rfcd/">educational material</a> about R, with voluntary classes being given at GVCode.
-                    <p><i class="fas fa-hourglass"></i> In development.<p>
-                </li>
-                <li class="project">
-                    <a href="https://github.com/ricardo-semiao/article-covid-svardiff">Graduation thesis</a> on SVAR models applied to epidemiology, and <a href="https://github.com/ricardo-semiao/article-regimes-id-performance">Masters thesis</a> on performance analysis of regime-switching models via Monte Carlo simulations.
-                </li>
-                <li class="project">
+                <li>
                     See more on <a href="https://github.com/ricardo-semiao">my Github</a>.
+                </li>
+            </ul>
+        </section>
+
+        <section id="awards">
+            <h2>Awards</h2>
+            <ul>
+                <li>
+                    ANPEC exam, the Brazil-wide admission for master's students in economics.
+                    <p class="award"><i class="fa fa-trophy"></i> 10th place (2023).<p>
+                </li>
+                <li>
+                    <a href="https://github.com/ricardo-semiao/challenge-constdev">Prediction Model</a> for investment flow in the Brazilian stock exchange, using a neural network.
+                    <p class="award"><i class="fa fa-trophy"></i> 2nd place in the Dev Challenge (2022, Constellation A. M.).<p>
+                </li>
+                <li>
+                    Article awards: Ridge and Lasso regression analysis on salary determinants; Nations clustering analysis with WTO data.
+                    <p class="award"><i class="fa fa-trophy"></i> 1st and 2nd place in the relevant category (2020 and 2021, EESP).<p>
                 </li>
             </ul>
         </section>
