Gallery, styling, and build improvements
- Finished gallery for now, secondary choices to the algorithm
- Added include/exclude options for SCSS asset job
- Redid cache
- Allowed template injection to arbitrary filenames, still in progress
- Next, gonna turn iteration into a single loop at the job then step level, following order in jobs.yaml

--- a/src/cv/template.html
+++ b/src/cv/template.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./module.css">
+
+    @@site-icons@@
 </head>
 
 
@@ -127,15 +129,15 @@
             <ul>
                 <li>
                     ANPEC exam, the Brazil-wide admission for master's students in economics.
-                    <p class="award"><i class="fa fa-trophy"></i> 10th place (2023).<p>
+                    <p class="award"><svg><use href="#icon-trophy"></use></svg> 10th place (2023).<p>
                 </li>
                 <li>
                     <a href="https://github.com/ricardo-semiao/challenge-constdev">Prediction Model</a> for investment flow in the Brazilian stock exchange, using a neural network.
-                    <p class="award"><i class="fa fa-trophy"></i> 2nd place in the Dev Challenge (2022, Constellation A. M.).<p>
+                    <p class="award"><svg><use href="#icon-trophy"></use></svg> 2nd place in the Dev Challenge (2022, Constellation A. M.).<p>
                 </li>
                 <li>
                     Article awards: Ridge and Lasso regression analysis on salary determinants; Nations clustering analysis with WTO data.
-                    <p class="award"><i class="fa fa-trophy"></i> 1st and 2nd place in the relevant category (2020 and 2021, EESP).<p>
+                    <p class="award"><svg><use href="#icon-trophy"></use></svg> 1st and 2nd place in the relevant category (2020 and 2021, EESP).<p>
                 </li>
             </ul>
         </section>
