--- a/src/global/global_components.html
+++ b/src/global/global_components.html
@@ -21,14 +21,18 @@
                 <li class="nav-li"><a href="/">Home</a></li>
                 <li class="nav-li"><a href="/blog">Blog</a></li>
                 <li class="nav-drop">
-                    <button aria-controls="menu-projects" aria-expanded="false">About</button>
+                    <button aria-controls="menu-projects" aria-expanded="false">
+                        <svg><use href="#icon-user"></use></svg>Personal
+                    </button>
                     <ul id="menu-personal">
                         <li class="nav-li"><a href="/cv">CV</a></li>
                         <li class="nav-li"><a href="/gallery">Gallery</a></li>
                     </ul>
                 </li>
                 <li class="nav-drop">
-                    <button aria-controls="menu-projects" aria-expanded="false">Projects</button>
+                    <button aria-controls="menu-projects" aria-expanded="false">
+                        <svg><use href="#icon-project"></use></svg>Projects
+                    </button>
                     <ul id="menu-projects">
                         <li class="nav-li"><a href="/library/rfcd">RFCD</a></li>
                         <li class="nav-li"><a href="/tools/phyopt">phyopt</a></li>
@@ -40,18 +44,8 @@
     </header>
 </div>
 
-<div data-component-name="site-main-rspkgdown">
-    <main id="rssite-main" class="rssite-rspkgdown"></main>
-</div>
-<div data-component-name="site-main-rsbookdown">
-    <main id="rssite-main" class="rssite-rsbookdown"></main>
-</div>
-<div data-component-name="site-main-quartoblog">
-    <main id="rssite-main" class="rssite-quartoblog"></main>
-</div>
-
 <div data-component-name="site-footer">
     <footer id="rssite-footer">
-        <p><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io"><i class="fab fa-github"></i> View source-code</a></p>
+        <p><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io"><svg><use href="#icon-github"></use></svg> View source-code</a></p>
     </footer>
 </div>
