--- a/src/index/template.html
+++ b/src/index/template.html
@@ -12,11 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./index/module.css">
 
-    <svg style="display: none;" xmlns="http://www.w3.org/2000/svg">
-        <symbol id="icon-info" viewBox="0 0 50 50">
-            <path d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z"></path>
-        </symbol>
-    </svg>
+    @@site-icons@@
 </head>
 
 
@@ -44,11 +40,11 @@
         <section id="socials">
             <h2>Socials</h2>
             <ul>
-                <li><a href="https://github.com/ricardo-semiao"><i class="fab fa-github"></i> Github</a></li>
-                <li><a href="mailto:ricardo.semiao@outlook.com"><i class="fas fa-envelope"></i> Email</a></li>
-                <li><a href="https://linkedin.com/in/ricardo-semiao"><i class="fab fa-linkedin"></i> Linkedin</a></li>
-                <li><a href="https://twitter.com/ricardo_semiao"><i class="fab fa-twitter"></i> Twitter</a></li>
-                <li><a href="https://stackoverflow.com/users/13048728"><i class="fab fa-stack-overflow"></i> StackOverflow</a></li>
+                <li><a href="https://github.com/ricardo-semiao">       <svg><use href="#icon-github"></use></svg>Github</a></li>
+                <li><a href="mailto:ricardo.semiao@outlook.com">       <svg><use href="#icon-envelope"></use></svg>Email</a></li>
+                <li><a href="https://linkedin.com/in/ricardo-semiao">  <svg><use href="#icon-linkedin"></use></svg>Linkedin</a></li>
+                <!-- <li><a href="https://twitter.com/ricardo_semiao">      <svg><use href="#icon-twitter"></use></svg>Twitter</a></li> -->
+                <li><a href="https://stackoverflow.com/users/13048728"><svg><use href="#icon-stackoverflow"></use></svg>StackOverflow</a></li>
             </ul>
         </section>
 
