Partial finish on site and projects styling
- Added small breakpoint at 360px
- Switched font awesome to icons.svg file with all the local icons
- Added GoatCounter
- Added back to top and collapsable navbar to external projects

--- a/src/cv/template.html
+++ b/src/cv/template.html
@@ -9,49 +9,39 @@
     
     @@site-style@@
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./module.css">
-
-    @@site-icons@@
+    <script data-goatcounter="https://ricardo-semiao.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 
 
-<body>
+<body class="rssite-local">
     @@site-header@@
 
-    <main id="rssite-main" class="rssite-local">
+    <main id="rssite-main">
         <div id="titlecard">
             <h1>Ricardo Semião e Castro</h1>
         </div>
 
         <section id="education">
             <h2>Education and Skills</h2> 
-            <table>
-                <tr>
-                    <td>Education</td>
-                    <td>Bachelor's Degree in Economics - FGV-EESP (2019 - 2023)</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Master's Degree in Economics - FGV-EESP (2024 - ongoing)</td>
-                </tr>
-                <tr>
-                    <td>Languages</td>
-                    <td>Fluent English - Cambridge English: Advanced (C1) Certificate</td>
-                </tr>
-                <tr>
-                    <td>Programming</td>
-                    <td>R | Python ; Familiarity with JavaScript | Julia | Stata</td>
-                </tr>
-                <tr>
-                    <td>Tools</td>
-                    <td>Git/GitHub | SQL</td>
-                </tr>
-                <tr>
-                    <td>Documenting</td>
-                    <td>LaTeX | HTML/CSS | Quarto | Microsoft Office </td>
-                </tr>
-            </table>
+            <dl>
+                <dt>Education</dt>
+                <dd>Bachelor's Degree in Economics - FGV-EESP (2019 - 2023)</dd>
+                <div></div>
+                <dd>Master's Degree in Economics - FGV-EESP (2024 - ongoing)</dd>
+
+                <dt>Languages</dt>
+                <dd>Fluent English - Cambridge English: Advanced (C1) Certificate</dd>
+                
+                <dt>Programming</dt>
+                <dd>R | Python ; Familiarity with JavaScript | Julia | Stata</dd>
+
+                <dt>Tools</dt>
+                <dd>Git/GitHub | SQL</dd>
+
+                <dt>Documenting</dt>
+                <dd>LaTeX | HTML/CSS | Quarto | Microsoft Office </dd>
+            </dl>
         </section>
 
         <section id="experience">
@@ -128,16 +118,16 @@
             <h2>Awards</h2>
             <ul>
                 <li>
-                    ANPEC exam, the Brazil-wide admission for master's students in economics.
-                    <p class="award"><svg><use href="#icon-trophy"></use></svg> 10th place (2023).<p>
+                    <p>ANPEC exam, the Brazil-wide admission for master's students in economics.</p>
+                    <p class="award"><svg><use href="/assets/img/icons.svg#icon-trophy"></use></svg> 10th place (2023).<p>
                 </li>
                 <li>
-                    <a href="https://github.com/ricardo-semiao/challenge-constdev">Prediction Model</a> for investment flow in the Brazilian stock exchange, using a neural network.
-                    <p class="award"><svg><use href="#icon-trophy"></use></svg> 2nd place in the Dev Challenge (2022, Constellation A. M.).<p>
+                    <p><a href="https://github.com/ricardo-semiao/challenge-constdev">Prediction Model</a> for investment flow in the Brazilian stock exchange, using a neural network.</p>
+                    <p class="award"><svg><use href="/assets/img/icons.svg#icon-trophy"></use></svg> 2nd place in the Dev Challenge (2022, Constellation A. M.).<p>
                 </li>
                 <li>
-                    Article awards: Ridge and Lasso regression analysis on salary determinants; Nations clustering analysis with WTO data.
-                    <p class="award"><svg><use href="#icon-trophy"></use></svg> 1st and 2nd place in the relevant category (2020 and 2021, EESP).<p>
+                    <p>Article awards: Ridge and Lasso regression analysis on salary determinants; Nations clustering analysis with WTO data.</p>
+                    <p class="award"><svg><use href="/assets/img/icons.svg#icon-trophy"></use></svg> 1st and 2nd place in the relevant category (2020 and 2021, EESP).<p>
                 </li>
             </ul>
         </section>
