--- a/src/gallery/template.html
+++ b/src/gallery/template.html
@@ -9,21 +9,19 @@
     
     @@site-style@@
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./module.css">
-    
-    @@site-icons@@
+    <script data-goatcounter="https://ricardo-semiao.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 
 
-<body>
+<body class="rssite-local">
     @@site-header@@
 
-    <main id="rssite-main" class="rssite-local gallery-grid"></main>
+    <main id="rssite-main" class="gallery-grid"></main>
 
     <div id="gallery-overlay" class="gallery-overlay" aria-hidden="true">
         <button class="go-closer"aria-controls="gallery-overlay">
-            <svg><use href="#icon-circlex"></use></svg>
+            <svg><use href="/assets/img/icons.svg#icon-circlex"></use></svg>
         </button>
         <img class="go-img" src="" alt="" aria-describedby="go-info">
         <div id="go-info" class="go-info" role="tooltip">
