--- a/src/global/global_components.html
+++ b/src/global/global_components.html
@@ -22,7 +22,7 @@
                 <li class="nav-li"><a href="/blog">Blog</a></li>
                 <li class="nav-drop">
                     <button aria-controls="menu-projects" aria-expanded="false">
-                        <svg><use href="#icon-user"></use></svg>Personal
+                        <svg><use href="/assets/img/icons.svg#icon-user"></use></svg>Personal
                     </button>
                     <ul id="menu-personal">
                         <li class="nav-li"><a href="/cv">CV</a></li>
@@ -31,7 +31,7 @@
                 </li>
                 <li class="nav-drop">
                     <button aria-controls="menu-projects" aria-expanded="false">
-                        <svg><use href="#icon-project"></use></svg>Projects
+                        <svg><use href="/assets/img/icons.svg#icon-project"></use></svg>Projects
                     </button>
                     <ul id="menu-projects">
                         <li class="nav-li"><a href="/library/rfcd">RFCD</a></li>
@@ -46,6 +46,6 @@
 
 <div data-component-name="site-footer">
     <footer id="rssite-footer">
-        <p><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io"><svg><use href="#icon-github"></use></svg> View source-code</a></p>
+        <p><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io"><svg><use href="/assets/img/icons.svg#icon-github"></use></svg> View source-code</a></p>
     </footer>
 </div>
