--- a/src/index/module/module_components.html
+++ b/src/index/module/module_components.html
@@ -1,5 +1,5 @@
 <div data-component-name="i">
     <button class="tooltip-controller" aria-label="Show project description" aria-controls="projects-tooltip" aria-expanded="false">
-        <svg><use href="#icon-info"></use></svg>
+        <svg><use href="/assets/img/icons.svg#icon-info"></use></svg>
     </button>
 </div>
