--- a/src/index/template.html
+++ b/src/index/template.html
@@ -9,17 +9,15 @@
     
     @@site-style@@
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./index/module.css">
-
-    @@site-icons@@
+    <script data-goatcounter="https://ricardo-semiao.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 
 
-<body>
+<body class="rssite-local">
     @@site-header@@
 
-    <main id="rssite-main" class="rssite-local">
+    <main id="rssite-main">
         <div id="titlecard">
             <h1>Ricardo Semião e Castro</h1>
         </div>
@@ -40,11 +38,11 @@
         <section id="socials">
             <h2>Socials</h2>
             <ul>
-                <li><a href="https://github.com/ricardo-semiao">       <svg><use href="#icon-github"></use></svg>Github</a></li>
-                <li><a href="mailto:ricardo.semiao@outlook.com">       <svg><use href="#icon-envelope"></use></svg>Email</a></li>
-                <li><a href="https://linkedin.com/in/ricardo-semiao">  <svg><use href="#icon-linkedin"></use></svg>Linkedin</a></li>
-                <!-- <li><a href="https://twitter.com/ricardo_semiao">      <svg><use href="#icon-twitter"></use></svg>Twitter</a></li> -->
-                <li><a href="https://stackoverflow.com/users/13048728"><svg><use href="#icon-stackoverflow"></use></svg>StackOverflow</a></li>
+                <li><a href="https://github.com/ricardo-semiao">       <svg><use href="/assets/img/icons.svg#icon-github"></use></svg>Github</a></li>
+                <li><a href="mailto:ricardo.semiao@outlook.com">       <svg><use href="/assets/img/icons.svg#icon-envelope"></use></svg>Email</a></li>
+                <li><a href="https://linkedin.com/in/ricardo-semiao">  <svg><use href="/assets/img/icons.svg#icon-linkedin"></use></svg>Linkedin</a></li>
+                <!-- <li><a href="https://twitter.com/ricardo_semiao">      <svg><use href="/assets/img/icons.svg#icon-twitter"></use></svg>Twitter</a></li> -->
+                <li><a href="https://stackoverflow.com/users/13048728"><svg><use href="/assets/img/icons.svg#icon-stackoverflow"></use></svg>StackOverflow</a></li>
             </ul>
         </section>
 
