Added tex cv and its build step
- Turned gallery algorithm into an external package
- Minor css and js adjustments

--- a/src/index/template.html
+++ b/src/index/template.html
@@ -26,8 +26,8 @@
             <div class="multicolumn">
                 <div class="column-text">
                     <h2>Welcome!</h2>
-                    <p>I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check my info below!</p>
-                    <p>In the navbar, you can find my CV, and the pages for some of my projects. Hover the projects below for a brief explanation of each.</p>
+                    <p>I'm a master's student in economics at FGV-EESP, with further interests in statistics/data science and and programming. Check my info below!</p>
+                    <p>In the navbar above you can find my blog, CV, a gallery, and some of my projects. Hover the '<svg><use href="/assets/img/icons.svg#icon-info"></use></svg>' icons below to see a brief explanation of each project.</p>
                 </div>
                 <div class="column-img">
                     <img src="/assets/img/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
@@ -52,40 +52,39 @@
                 <div class="column-card">
                     <p>Academic articles/tasks:</p>
                     <ul>
-                        <li><a href="https://github.com/ricardo-semiao/misc-masters" data-description="Empirical and theoretical tasks from my masters degree, spamming several courses, with lots of econometrics.">misc-masters</a>@@i@@</li>
-                        <li><a href="https://github.com/ricardo-semiao/article-regime-id-performance" data-description="My (in progress) Master thesis. My goal is to understand the performance of regime switching time-series models, specially in respect to characteristics correctness of the identified regimes, using Monte Carlo simulations.">article-regime-id-performance</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/article-regime-id-performance" data-description="My (in progress) Master thesis. My goal is to understand the performance of regime switching time-series models, specially in relation to the characteristics of the estimated regimes, using Monte Carlo simulations.">article-regime-id-performance</a>@@i@@</li>
                         <li><a href="https://github.com/ricardo-semiao/article-covid-svardiff" data-description="My graduation thesis. My goal was to estimate the effect of the Brazilian vaccination policy, by comparing Structural VAR models before and after the start of its implementation.">article-covid-svardiff</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/misc-masters" data-description="Empirical and theoretical tasks from my masters degree, spamming several courses, with lots of econometrics.">misc-masters</a>@@i@@</li>
                     </ul>
                 </div>
                 <div class="column-card">
-                    <p>Educational materials:</p>
+                    <p>R packages:</p>
                     <ul>
-                        <li><a href="https://ricardo-semiao.github.io/course-rfcd" data-description="An educational book on the R language. Authorial, but inspired by existing literature. It is in construction and available in the navbar above.">R (RFCD)</a>@@i@@</li>
-                        <li><a href="https://ricardo-semiao.github.io/course-ccia" data-description="An educational book on introductory Computer Science and its applications. Made for my own study. It is in construction and available in the navbar above.">CC (CCIA)</a>@@i@@</li>
-                        <li><a href="https://ricardo-semiao.github.io/course-paaml" data-description="An educational book on Python (automation, apps, and ML). Made for my personal study. It is in construction and available in the navbar above.">Python (PAAML)</a>@@i@@</li>
+                        <li><a href="https://ricardo-semiao.github.io/phyopt" data-description="An R package for describing and testing multivariate time series with ggplots and tables.">mtsdesc</a>@@i@@</li>
+                        <li><a href="https://ricardo-semiao.github.io/mtsdesc" data-description="An R package for creating population-based hybrid-optimization algorithms.">phyopt</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/morphdown" data-description="An R package to programmatically edit Markdown files. Built to convert my book 'RFCD' into course-friendly slide presentations.">morphdown</a>@@i@@</li>
                     </ul>
                 </div>
                 <div class="column-card">
-                    <p>Code packages:</p>
+                    <p>Python packages:</p>
                     <ul>
-                        <li><a href="https://ricardo-semiao.github.io/phyopt" data-description="A R package for describing multivariate time series with ggplots and tables.">phyopt</a>@@i@@</li>
-                        <li><a href="https://ricardo-semiao.github.io/mtsdesc" data-description="A R package for creating population-based hybrid-optimization algorithms.">mtsdesc</a>@@i@@</li>
-                        <li><a href="https://github.com/ricardo-semiao/morphdown" data-description="A R package to programmatically change the structure of R Markdown files. Built to convert my book 'RFCD' into course-friendly slide presentations.">morphdown</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/tree/main/packages/template_injector" data-description="A simple, custom build, HTML template engine built in Python. Uses regex to identify component calls.">template_injector</a>@@i@@</li>
+                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/tree/main/packages/template_injector" data-description="A packing algorithm for rectangles with discrete dimensions. Built with numpy, it is partially random, finding the best option over may draws.">armasonry</a>@@i@@</li>
                     </ul>
                 </div>
                 <div class="column-card">
                     <p>Site and tools:</p>
                     <ul>
+                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/" data-description="My personal site. built with bare html/scss/js, and custom python scripts to orchestrate components, masonry optimization, processing external projects' sites and the quarto blog.">This site</a>@@i@@</li>
                         <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/" data-description="A GitHub repository for storing my personal palette, file templates, etc.">Personal themes/tools</a>@@i@@</li>
-                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/" data-description="My personal site. It includes the Home and CV tabs, and the common templates used in other published projects.">This site</a>@@i@@</li>
-                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/tree/main/packages/template_injector" data-description="A simple, custom build, HTML template engine built in Python. It was built to power this site.">template_injector</a>@@i@@</li>
                     </ul>
                 </div>
                 <div class="column-card">
                     <p>Miscellaneous:</p>
                     <ul>
+                        <li><a href="https://ricardo-semiao.github.io/course-rfcd" data-description="An educational book on the R language. Authorial, but inspired by existing literature. It is in construction and available in the navbar above.">RFCD book</a>@@i@@</li>
                         <li><a href="https://github.com/ricardo-semiao/misc-general" data-description="Miscellaneous projects, most for fun or for learning, with questionable quality.">misc-general</a>@@i@@</li>
-                        <li><a href="https://github.com/mevaldt/diversified_crypto" data-description="A R Shiny app for crypto portfolio optimization and analysis. Built in a project for Ripple.">mevaldt/diversified_crypto</a>@@i@@</li>
+                        <li><a href="https://github.com/mevaldt/diversified_crypto" data-description="A R Shiny app for crypto portfolio optimization and analysis, with Ripple funding.">diversified_crypto</a>@@i@@</li>
                     </ul>
                 </div>
             </div>
